--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,13 @@ dist-ssr
 
 # Vercel
 .vercel
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+backend/venv/
+backend/env/
+backend/.env
